@@ -180,10 +180,6 @@ if ($step === 1) {
                 }
                 ?>
 
-                <p class="alert alert-danger">
-                    Dude, this is an early alpha version. Please don't update your production version!
-                </p>
-
                 <p style="text-align: center">
                     <button class="btn btn-primary btn-large" type="submit">
                         Go to step 2 of 3
@@ -290,12 +286,7 @@ if ($step == 2) {
 
 /**************************** STEP 3 OF 3 ***************************/
 if ($step == 3) {
-    
-    require_once PMF_ROOT_DIR . '/inc/Configuration.php';
-    require_once PMF_ROOT_DIR . '/inc/Db.php';
-    require_once PMF_ROOT_DIR . '/inc/DB/Driver.php';
-    require_once PMF_ROOT_DIR . '/inc/Link.php';
-    
+
     $images = array();
 
     //
